<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".General_quizActivity">

    <LinearLayout
        android:id="@+id/general_first"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <!--    이전 버튼-->
        <ImageButton
            android:layout_width="25sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:adjustViewBounds="true"
            android:background="@color/colorMain"
            android:contentDescription="@string/image"
            android:src="@drawable/arrow_back" />

        <!--    이전버튼과 퀴즈 출제 버튼을 각각 왼쪽, 오른족 끝에 정렬하기 위해 삽입-->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!--    퀴즈 출제 버튼-->
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorMain"
            android:fontFamily="@font/notosanscjkkr_regular"
            android:text="@string/퀴즈_출제"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/general_first">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/notosans_cjkkr_bold"
                android:gravity="center_horizontal"
                android:text="@string/news_headline"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="end"
                android:text="@string/news_origin"
                android:textColor="@color/colorSoftGray"
                android:textSize="12sp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/image"
                android:src="@drawable/sample_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/news_content"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorDivision" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_cjkkr_medium"
                android:gravity="center_horizontal"
                android:text="@string/please_make_quiz"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_cjkkr_medium"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8dp"
                android:text="@string/quiz_explanation"
                android:textAlignment="center"
                android:textColor="@color/colorGray"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="30dp"
                app:counterEnabled="true"
                app:counterMaxLength="60">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:maxLines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="40">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correct_answer"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="40dp"
                app:counterEnabled="true"
                app:counterMaxLength="40">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/wrong_answer"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>