<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".Resident_quizActivity">

    <LinearLayout
        android:id="@+id/textview_resident"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <!--    이전 버튼-->
        <ImageButton
            android:layout_width="25sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:adjustViewBounds="true"
            android:background="@color/colorMain"
            android:contentDescription="@string/image"
            android:src="@drawable/arrow_back" />

        <!--    이전버튼과 퀴즈 출제 버튼을 각각 왼쪽, 오른족 끝에 정렬하기 위해 삽입-->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!--    퀴즈 출제 버튼-->
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorMain"
            android:fontFamily="@font/notosanscjkkr_regular"
            android:text="@string/check_answer"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/resident_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_resident"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/notosans_cjkkr_medium"
        android:gravity="center_horizontal"
        android:text="@string/resident_made_quiz"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/resident_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resident_second"
        android:layout_marginStart="19sp"
        android:layout_marginLeft="19sp"
        android:layout_marginTop="56sp"
        android:layout_marginEnd="26sp"
        android:layout_marginRight="26sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_cjkkr_medium"
            android:lineSpacingExtra="12sp"
            android:textColor="@color/friendly_green"
            android:textSize="18sp"
            tools:text="Q. " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_cjkkr_medium"
            android:gravity="start"
            android:textSize="18sp"
            tools:text="플라스틱 용기의 대안으로 부상했지만\n사실상 재활용이 불가능한 플라스틱은?" />

    </LinearLayout>

    <TextView
        android:id="@+id/resident_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resident_third"
        android:layout_marginStart="75sp"
        android:layout_marginLeft="75sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/notosanscjkkr_regular"
        android:gravity="center_horizontal"

        android:textColor="@color/colorSoftGray"
        android:textSize="12sp"
        tools:text="서울시 용산구 권*엽님 출제" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resident_4"
        android:layout_marginLeft="26sp"
        android:layout_marginTop="100sp"
        android:layout_marginRight="26sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/correct_answer"
            android:layout_width="308sp"
            android:layout_height="90sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:fontFamily="@font/notosans_cjkkr_medium"
            android:text="@string/resident_correct_answer"
            android:textSize="16sp" />

        <Button
            android:id="@+id/wrong_answer"
            android:layout_width="308sp"
            android:layout_height="90sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/notosans_cjkkr_medium"
            android:text="@string/resident_wrong_answer"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>