<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".MakequizActivity">

    <LinearLayout
        android:id="@+id/general_first"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <!--    이전 버튼-->
        <ImageButton
            android:id="@+id/imagebutton_back_general_quiz"
            android:layout_width="25sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:adjustViewBounds="true"
            android:background="@color/colorMain"
            android:contentDescription="@string/image"
            android:src="@drawable/arrow_back" />

        <!--    이전버튼과 퀴즈 출제 버튼을 각각 왼쪽, 오른족 끝에 정렬하기 위해 삽입-->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!--    퀴즈 출제 버튼-->
        <Button
            android:id="@+id/button_makequiz_button_makequiz"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="@color/colorMain"
            android:fontFamily="@font/notosanscjkkr_regular"
            android:text="@string/퀴즈_출제"
            android:textColor="@color/colorText"
            android:textSize="14dp"
            tools:ignore="SpUsage" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/general_first">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_header_makequiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/notosans_cjkkr_bold"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="24dp"
                tools:ignore="SpUsage" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanscjkkr_regular"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:text="출처 : "
                    android:textColor="@color/colorSoftGray"
                    android:textSize="13dp"
                    tools:ignore="HardcodedText,SpUsage" />

                <TextView
                    android:id="@+id/textview_origin_makequiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanscjkkr_regular"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorSoftGray"
                    android:textSize="13dp"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_img_makequiz"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/image"
                android:src="@drawable/sample_image" />

            <TextView
                android:id="@+id/textview_content_makequiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="9dp"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorDivision" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_cjkkr_medium"
                android:gravity="center_horizontal"
                android:text="@string/please_make_quiz"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_cjkkr_medium"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8dp"
                android:text="@string/quiz_explanation"
                android:textAlignment="center"
                android:textColor="@color/colorGray"
                android:textSize="14dp"
                tools:ignore="SpUsage" />

            <!--문제 입력-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="30dp"
                app:counterEnabled="true"
                app:counterMaxLength="60">

                <EditText
                    android:id="@+id/edittext_question_makequiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="40">

                <EditText
                    android:id="@+id/edittext_correctans_makequiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correct_answer"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="40dp"
                app:counterEnabled="true"
                app:counterMaxLength="40">

                <EditText
                    android:id="@+id/edittext_wrongans_makequiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/wrong_answer"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>